--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ width:100%;
 background-color: white;
 }
 
+.intro {
+    margin: 8px 0px;
+}
+
 #logo {
     width: 70%;
     margin: 0px auto;
@@ -93,7 +97,7 @@ button {
     line-height: 24px;
     margin-bottom: 0px;
     margin-left: 0px;
-    margin-right: 0px;
+    margin-right: 10px;
     margin-top: 0px;
     padding-bottom: 8px;
     padding-left: 16px;
@@ -114,19 +118,19 @@ button {
     transition-timing-function: ease-in-out,ease-in-out,ease-in-out,ease-in-out;
     user-select: none;
     vertical-align: middle;
-    /*width: 87.5px;*/
-    word-spacing: 0px;
-    writing-mode: horizontal-tb;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);    
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
-#continue, #cancel {
-    float: left;
-    margin-right: 10px;
+#continue, #cancel, #email_ver_but_edit {
+    float: left; 
 }
 
 .error {
     color:red;
+}
+
+.Password {
+    clear: both;
 }
 
 #signInName_label, #password_label, #email_label, #newPassword_label, #reenterPassword_label {
@@ -138,8 +142,21 @@ button {
     padding-top: 16px;
 }
 
+.verificationInfoText, .verificationSuccessText, .verificationErrorText {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 0px;
+    margin-right: 0px;
+    display: block;
+}
+
 div.buttons {
+    min-height: 36px;
     margin-bottom: 16px;
+}
+
+div#api > div.buttons:first-child {
+    display: none;
 }
 
 input {
